Fix regression where visibility:visible elements in unselected panes became visible, Fixes #18612, fixes #18799.

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -50,11 +50,15 @@ table.dijitInline {
 	position: absolute; /* remove from normal document flow to simulate display: none */
 	visibility: hidden; /* hide element from view, but don't break scrolling, see #18612 */
 }
+.dijitHidden * {
+	visibility: hidden !important; /* hide visibility:visible descendants of class=dijitHidden nodes, see #18799 */
+}
 
 .dijitVisible {
 	/* To show selected pane in StackContainer etc. */
 	display: block !important;	/* override user's display:none setting via style setting or indirectly via class */
 	position: relative;			/* to support setting width/height, see #2033 */
+	visibility: visible;
 }
 
 .dj_ie6 .dijitComboBox .dijitInputContainer,
